--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -6,64 +6,58 @@
     tools:context=".MainActivity">
 
     <com.crust87.videocropview.VideoCropView
-        android:id="@+id/cropVideoView"
-        android:layout_width="match_parent"
+        android:id="@+id/videoCropView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:ratio_height="1"
         app:ratio_width="1" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/button43"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:text="4 : 3"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLoad"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/button11" />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="1 : 1"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLoad"
+        app:layout_constraintLeft_toRightOf="@id/button43"
+        app:layout_constraintRight_toLeftOf="@id/button34" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onButton43Clicked"
-                android:text="4 : 3" />
+    <Button
+        android:id="@+id/button34"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="3 : 4"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLoad"
+        app:layout_constraintLeft_toRightOf="@id/button11"
+        app:layout_constraintRight_toLeftOf="@id/buttonOriginal" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onButton11Clicked"
-                android:text="1 : 1" />
+    <Button
+        android:id="@+id/buttonOriginal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="ORIGINAL"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLoad"
+        app:layout_constraintLeft_toRightOf="@id/button34"
+        app:layout_constraintRight_toRightOf="parent" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onButton34Clicked"
-                android:text="3 : 4" />
+    <Button
+        android:id="@+id/buttonLoad"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Load Video"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onButtonOriginalClicked"
-                android:text="ORIGINAL" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:onClick="onButtonLoadClick"
-                android:text="Load Video" />
-        </LinearLayout>
-    </LinearLayout>
-
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
