--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,17 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.crust87.videocropview.app.MainActivity">
 
-    <com.crust87.videocropview.VideoCropView
-        android:id="@+id/videoCropView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <FrameLayout
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:ratio_height="1"
-        app:ratio_width="1" />
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp">
+
+        <com.crust87.videocropview.VideoCropView
+            android:id="@+id/videoCropView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:ratio_height="1"
+            app:ratio_width="1" />
+
+    </FrameLayout>
 
     <Button
         android:id="@+id/button43"
